<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notes.AddNoteFuelActivity"
    android:background="@color/background">

    <ImageButton
        android:id="@+id/FuelNoteAddButtonBack"
        android:layout_width="48dp"
        android:layout_height="58dp"
        android:backgroundTint="#00FFFFFF"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_back"
        app:tint="@color/contacts_phone"
        tools:src="@drawable/icon_back" />

    <RelativeLayout
        android:id="@+id/FuelNoteAddHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="50dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/wg_headers">

        <TextView
            android:id="@+id/FuelNoteAddHeaderTitle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/NoteAddFuelTitle"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_below="@+id/FuelNoteAddHeaderTitle">
            <ImageButton
                android:id="@+id/FuelNoteAddDatePickerButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="#00FFFFFF"
                android:src="@drawable/icon_calendar"
                app:tint="@color/white"
                tools:src="@drawable/icon_calendar" />
            <TextView
                android:id="@+id/FuelNoteAddDatePickerText"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/FuelNoteAddData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/FuelNoteAddHeader"
        android:layout_marginHorizontal="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/NoteAddFuelOdoS"
                    android:layout_marginHorizontal="5dp"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/FuelNoteAddDataKmS"
                    android:layout_width="125dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="5dp"
                    android:hint="@string/NoteAddFuelKM"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:background="@drawable/wg_note_inputs"
                    android:paddingHorizontal="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/NoteAddFuelOdoF"
                    android:layout_marginHorizontal="5dp"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/FuelNoteAddDataKmF"
                    android:layout_width="125dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="5dp"
                    android:hint="@string/NoteAddFuelKM"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:background="@drawable/wg_note_inputs"
                    android:paddingHorizontal="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/NoteAddFuelFuelS"
                    android:layout_marginHorizontal="5dp"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/FuelNoteAddDataFuelS"
                    android:layout_width="125dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="5dp"
                    android:hint="@string/NoteAddFuelL"
                    android:inputType="numberDecimal"
                    android:textSize="16sp"
                    android:background="@drawable/wg_note_inputs"
                    android:paddingHorizontal="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/NoteAddFuelRefuel"
                    android:layout_marginHorizontal="5dp"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/FuelNoteAddDataRefuel"
                    android:layout_width="125dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="5dp"
                    android:hint="@string/NoteAddFuelL"
                    android:text="@string/NoteAddFuelZero"
                    android:inputType="numberDecimal"
                    android:textSize="16sp"
                    android:background="@drawable/wg_note_inputs"
                    android:paddingHorizontal="10dp"/>
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/FuelNoteAddAuto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="15dp"
                android:padding="15dp"
                android:background="@drawable/wg_fuel_auto">

                <TextView
                    android:id="@+id/FuelNoteAddAutoTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/NoteAddFuelAuto"/>
                <Spinner
                    android:id="@+id/FuelNoteAddAutoSelect"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/FuelNoteAddAutoTitle" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@+id/FuelNoteAddAutoSelect">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:gravity="center_vertical">
                        <TextView
                            android:id="@+id/FuelNoteAddAutoConsText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/NoteAddFuelConsumption"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:layout_marginHorizontal="10dp"/>
                        <TextView
                            android:id="@+id/FuelNoteAddAutoCons"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/FuelNoteAddAutoConsText"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:layout_marginHorizontal="10dp"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginVertical="5dp"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/FuelNoteAddAutoTankText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/NoteAddFuelTank"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:layout_marginHorizontal="10dp"/>
                        <TextView
                            android:id="@+id/FuelNoteAddAutoTank"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/FuelNoteAddAutoTankText"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:layout_marginHorizontal="10dp"/>

                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/NoteAddFuelKMTotal"
                    android:layout_marginHorizontal="5dp"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/FuelNoteAddDataKmTotal"
                    android:layout_width="125dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="5dp"

                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/NoteAddFuelFueLF"
                    android:layout_marginHorizontal="5dp"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/FuelNoteAddDataFuelTotal"
                    android:layout_width="125dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="5dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/FuelNoteAddButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_below="@+id/FuelNoteAddData"
        android:background="@color/headers">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/FuelNoteAddError"
            android:gravity="center"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="15dp"
            android:visibility="gone"/>
        <Button
            android:id="@+id/FuelNoteAddButtonLast"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:layout_below="@+id/FuelNoteAddError"
            android:backgroundTint="@color/contacts_phone"
            android:text="@string/NoteAddFuelLastData"
            android:clickable="false"/>
        <Button
            android:id="@+id/FuelNoteAddButtonSave"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/FuelNoteAddError"
            android:backgroundTint="@color/contacts_phone"
            android:text="@string/ButtonSave"
            android:clickable="false"/>
    </RelativeLayout>
</RelativeLayout>